<resources>
    <string name="app_name">Inventory</string>
    <string name="product_name">Product Name</string>
    <string name="supplier">Supplier</string>
    <string name="quantity">Quantity</string>
    <string name="add_product">Add Product</string>
    <string name="price">Price</string>
    <string name="sale">Sale</string>
    <string name="delete">Delete</string>
    <string name="order">Order</string>
    <string name="add_shipment">Add Shipment</string>
    <string name="sure_delete">Are you sure you want to delete item?</string>
    <string name="cancel">Cancel</string>
    <string name="add_image">Add Image</string>
    <string name="please_enter">Please Enter </string>
    <string name="image">Image</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="send">Send</string>
    <string name="email_order_subject">New Order</string>
    <string name="email_message" formatted="false">I would like to order %s %ss.</string>
    <string name="empty_state">Add your first product!</string>
    <string name="email_app_not_found">Email app not found</string>
    <string name="email">Email</string>
</resources>
